add link to alltweets css

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,11 @@
     <!-- Header CSS-->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
-    <!-- New Tweets -->
+    <!-- New Tweets CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+    <!-- All Tweets CSS -->
+    <link rel="stylesheet" href="/styles/all-tweets.css" type="text/css">
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,6 +34,7 @@
 
     <!-- Counter JS-->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
 
   </head>
     <body>
@@ -60,6 +64,10 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+
+      <section class="all-tweets">
+
       </section>
 
       </main>
