create container for tweets

--- a/public/index.html
+++ b/public/index.html
@@ -66,9 +66,15 @@
         </form>
       </section>
 
-      <section class="all-tweets">
-
-      </section>
+        <article class="tweet-container">
+          <header>
+            <img src="/images/user.svg">
+            <br>
+            <h4>Name</h4>
+            <h4 class="username">@username</h4>
+          </header>
+          <p class="tweet-one">Tweet One</p>
+        </article>
 
       </main>
     </main>
