add header and footer for tweets

--- a/public/index.html
+++ b/public/index.html
@@ -67,13 +67,33 @@
       </section>
 
         <article class="tweet-container">
-          <header>
-            <img src="/images/user.svg">
-            <br>
-            <h4>Name</h4>
-            <h4 class="username">@username</h4>
+
+          <header class="profile">
+            <img src="/images/avatar.png">
+             <h3 class="user">Name</h3>
+
+            <div class="username">
+              <h3>@username</h3>
+            </div>
+
           </header>
-          <p class="tweet-one">Tweet One</p>
+
+          <div class="tweets">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum in velit eu commodo. Nunc vel consectetur ipsum. Integer finibus ullamcorper scelerisque. Morbi bibendum ante non ullamcorper viverra. Ut et enim lectus. Ut finibus ullamcorper urna, et elementum nunc interdum sed. </p>
+          </div>
+
+          <footer>
+            <div class="date">
+            <p>2 hours ago</p>
+            </div>
+
+            <div class="icons">
+              <img src="/images/flag.svg">
+              <img src="/images/repeat.svg">
+              <img src="/images/heart.svg">
+            </div>
+          </footer>
+
         </article>
 
       </main>
