add mutiple tweets

--- a/public/index.html
+++ b/public/index.html
@@ -69,13 +69,79 @@
         <article class="tweet-container">
 
           <header class="profile">
+            <div class="img">
             <img src="/images/avatar.png">
-             <h3 class="user">Name</h3>
-
+            </div>
+            <div class="user-fullname">
+              <h2>Monica Geller</h2>
+            </div>
             <div class="username">
-              <h3>@username</h3>
+              <h2>@friends</h2>
+            </div>
+          </header>
+
+          <div class="tweets">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum in velit eu commodo. Nunc vel consectetur ipsum. Integer finibus ullamcorper scelerisque. Morbi bibendum ante non ullamcorper viverra. Ut et enim lectus. Ut finibus ullamcorper urna, et elementum nunc interdum sed. </p>
+          </div>
+
+          <footer>
+            <div class="date">
+            <p>2 hours ago</p>
             </div>
 
+            <div class="icons">
+              <img src="/images/flag.svg">
+              <img src="/images/repeat.svg">
+              <img src="/images/heart.svg">
+            </div>
+          </footer>
+
+        </article>
+
+        <article class="tweet-container">
+
+          <header class="profile">
+            <div class="img">
+            <img src="/images/avatar.png">
+            </div>
+            <div class="user-fullname">
+              <h2>Monica Geller</h2>
+            </div>
+            <div class="username">
+              <h2>@friends</h2>
+            </div>
+          </header>
+
+          <div class="tweets">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum in velit eu commodo. Nunc vel consectetur ipsum. Integer finibus ullamcorper scelerisque. Morbi bibendum ante non ullamcorper viverra. Ut et enim lectus. Ut finibus ullamcorper urna, et elementum nunc interdum sed. </p>
+          </div>
+
+          <footer>
+            <div class="date">
+            <p>2 hours ago</p>
+            </div>
+
+            <div class="icons">
+              <img src="/images/flag.svg">
+              <img src="/images/repeat.svg">
+              <img src="/images/heart.svg">
+            </div>
+          </footer>
+
+        </article>
+
+        <article class="tweet-container">
+
+          <header class="profile">
+            <div class="img">
+            <img src="/images/avatar.png">
+            </div>
+            <div class="user-fullname">
+              <h2>Monica Geller</h2>
+            </div>
+            <div class="username">
+              <h2>@friends</h2>
+            </div>
           </header>
 
           <div class="tweets">
