--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
   </head>
     <body>
     <!-- Top nav bar (fixed) -->
-    <nav class="navContainer">
+    <nav>
       <span class="title">TWEETER</span>
       <div class="subtitle"><b>Write</b> a new tweet</div>
     </nav>
