create section for all tweets

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,6 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-
       <section class="new-tweet">
         <form class="prompt" method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
@@ -65,7 +64,7 @@
           </div>
         </form>
       </section>
-
+      <section class="all-tweets">
         <article class="tweet-container">
 
           <header class="profile">
@@ -161,7 +160,7 @@
           </footer>
 
         </article>
-
+      </section>>
       </main>
     </main>
   </body>
