add error comment

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
           <span class="error-text">Error: Tweet exceeds the word limit.</span>
         </div>
 
+        <!-- Error Validation -->
         <div class="error-empty-text">
           <span class="error-text">Error: Please enter a valid Tweet.</span>
         </div>
