--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,14 @@
     <!-- Ajax with jQuery-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> 
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon.ico"/>
+
   </head>
     <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span class="title">TWEETER</span>
+      <span class="title">TWEETER 🐦</span>
       <div class="subtitle"><b>Write</b> a new tweet</div>
     </nav>
 
