--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
     <!-- Ajax with jQuery-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> 
 
+    <!-- Timeago -->
+    <script src="/vendor/jquery-2.2.3.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.min.js" integrity="sha512-RlGrSmkje9EE/FXpJKWf0fvOlg4UULy/blvNsviBX9LFwMj/uewXVoanRbxTIRDXy/0A3fBQppTmJ/qOboJzmA==" crossorigin="anonymous"></script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/images/favicon.ico"/>
 
