--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/images/favicon.ico"/>
 
+    <!-- Zoom Disabled -->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
   </head>
     <body>
     <!-- Top nav bar (fixed) -->
@@ -52,6 +55,8 @@
       <span class="title">TWEETER 🐦</span>
       <div class="subtitle"><b>Write</b> a new tweet</div>
     </nav>
+
+    <div class="under-nav">
 
     <header>
       <div class="header-container">
@@ -75,7 +80,7 @@
 
         <form class="prompt" method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <textarea name="text" id="tweet-text" contenteditable></textarea>
           <div id="button-counter">
             <button type="submit" id="tweet-button" ><b>Tweet</b></button>
             <output name="counter" class="counter" for="tweet-text">140</output>
@@ -89,5 +94,7 @@
       </section>
       </main>
     </main>
+
+  </div>
   </body>
 </html>
