--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,9 @@
     <!-- Ajax with jQuery-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> 
 
-    <!-- Timeago -->
-    <script src="/vendor/jquery-2.2.3.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.min.js" integrity="sha512-RlGrSmkje9EE/FXpJKWf0fvOlg4UULy/blvNsviBX9LFwMj/uewXVoanRbxTIRDXy/0A3fBQppTmJ/qOboJzmA==" crossorigin="anonymous"></script>
+    <!-- Dayjs -->
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/plugin/relativeTime.js"></script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/images/favicon.ico"/>
@@ -53,7 +53,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="title">TWEETER 🐦</span>
-          <button type="submit" id="subtitle"><b>Write</b> a new tweet</button>
+          <button type="submit" id="subtitle"><b>Write</b> a new tweet 👋</button>
     </nav>
 
     <div class="under-nav">
