add dayjs for timestamp

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <!-- Ajax with jQuery-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> 
 
-    <!-- Dayjs -->
+    <!-- Dayjs for Timestamp -->
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/plugin/relativeTime.js"></script>
 
