--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/plugin/relativeTime.js"></script>
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/0329b2692c.js" crossorigin="anonymous"></script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/images/favicon.ico"/>
 
